; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/zstd/extr_zstd_lazy.c_ZSTD_BtFindBestMatch_extDict_selectMLS.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/zstd/extr_zstd_lazy.c_ZSTD_BtFindBestMatch_extDict_selectMLS.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

@ZSTD_extDict = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_6__*, i32*, i32*, i64*)* @ZSTD_BtFindBestMatch_extDict_selectMLS to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ZSTD_BtFindBestMatch_extDict_selectMLS(%struct.TYPE_6__* %0, i32* %1, i32* %2, i64* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_6__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i64* %3, i64** %9, align 8
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  switch i32 %13, label %14 [
    i32 4, label %15
    i32 5, label %22
    i32 7, label %29
    i32 6, label %29
  ]

14:                                               ; preds = %4
  br label %15

15:                                               ; preds = %4, %14
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %17 = load i32*, i32** %7, align 8
  %18 = load i32*, i32** %8, align 8
  %19 = load i64*, i64** %9, align 8
  %20 = load i32, i32* @ZSTD_extDict, align 4
  %21 = call i64 @ZSTD_BtFindBestMatch(%struct.TYPE_6__* %16, i32* %17, i32* %18, i64* %19, i32 4, i32 %20)
  store i64 %21, i64* %5, align 8
  br label %36

22:                                               ; preds = %4
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %24 = load i32*, i32** %7, align 8
  %25 = load i32*, i32** %8, align 8
  %26 = load i64*, i64** %9, align 8
  %27 = load i32, i32* @ZSTD_extDict, align 4
  %28 = call i64 @ZSTD_BtFindBestMatch(%struct.TYPE_6__* %23, i32* %24, i32* %25, i64* %26, i32 5, i32 %27)
  store i64 %28, i64* %5, align 8
  br label %36

29:                                               ; preds = %4, %4
  %30 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %31 = load i32*, i32** %7, align 8
  %32 = load i32*, i32** %8, align 8
  %33 = load i64*, i64** %9, align 8
  %34 = load i32, i32* @ZSTD_extDict, align 4
  %35 = call i64 @ZSTD_BtFindBestMatch(%struct.TYPE_6__* %30, i32* %31, i32* %32, i64* %33, i32 6, i32 %34)
  store i64 %35, i64* %5, align 8
  br label %36

36:                                               ; preds = %29, %22, %15
  %37 = load i64, i64* %5, align 8
  ret i64 %37
}

declare dso_local i64 @ZSTD_BtFindBestMatch(%struct.TYPE_6__*, i32*, i32*, i64*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
